# stm32flappybird

./: .gitignore  CMakeLists.txt  Makefile
engine/: CMakeLists.txt
engine/include/: game_engine.h  game_structs.h  graphics_engine.h  physics_engine.h
engine/include/internal/: collision.h  game_field.h  graphics_internal.h  moving.h  physics_internal.h
engine/src/: collision.c  game_engine.c  game_field.c  graphics_engine.c  moving.c  physics_engine.c
engine/test/: CMakeLists.txt
engine/test/include/: Mockgraphics.h
engine/test/src/: test_collision.c  test_game_field.c  test_graphics_engine.c  test_moving.c
engine/test/src/mocks/: Mockgraphics.c
executable/: CMakeLists.txt
executable/stm32f4/: CMakeLists.txt
executable/stm32f4/include/: systimer.h
executable/stm32f4/src/: button_handler.c  main.c  primary_button_handler.c  secondary_button_handler.c  system_stm32f4xx.c  systimer.c
executable/unix/: CMakeLists.txt
executable/unix/src/: main.c
flappybird/: CMakeLists.txt
flappybird/include/: flappybird.h  flappybird_events.h  flappybird_settings.h
flappybird/include/internal/: engine_event_handler.h  game_object_factory.h  game_objects.h  object_buffer.h
flappybird/src/: engine_event_handler.c  flappybird.c  flappybird_events.c  game_object_factory.c  object_buffer.c  physics_engine_event_handler.c
graphics/: CMakeLists.txt
graphics/gtk+/: CMakeLists.txt
graphics/gtk+/include/: geometric_primitives.h  graphics.h  graphics_engine_internal.h  gtk_graphics.h
graphics/gtk+/src/: graphics_engine_internal.c  gtk_graphics.c
graphics/include/: geometric_primitives.h  graphics.h  graphics_engine.h
graphics/stm32f4_ssd1306/: CMakeLists.txt
graphics/stm32f4_ssd1306/src/: ssd1306_graphics.c
libs/: CMakeLists.txt
libs/cmock/: CMakeLists.txt
libs/ssd1306/: CMakeLists.txt
libs/ssd1306/include/: ssd1306_driver.h
libs/ssd1306/src/: ssd1306_driver.c
libs/stm32/spl/: CMakeLists.txt
libs/unity/: CMakeLists.txt
platform/: CMakeLists.txt
platform/include/: random_service.h  timer_service.h
platform/stm32f4/: CMakeLists.txt
platform/stm32f4/include/: platform.h  stm32f4_timer.h
platform/stm32f4/src/: random_service.c  timer_service.c
platform/unix/: CMakeLists.txt
platform/unix/include/: platform.h
platform/unix/src/: random_service.c  timer_service.c
toolchainfiles/: stm32f4.cmake  unix.cmake
